lavji-terra/network.tf
resource "google_compute_subnetwork" "public_subnet_1" {
  name          = "${var.project}-public-subnet-1"
  ip_cidr_range = var.public_subnet_cidr_1
  network       = google_compute_network.vpc.name
  region        = var.region
}
